# django-neomodel-admin

./: README.rst  setup.cfg  setup.py
django_neomodel_admin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
neomodel_admin/: options.py
sample_project/neo4jadmin/: db.sqlite3  manage.py  requirement.txt
sample_project/neo4jadmin/neo4jadmin/: asgi.py  settings.py  urls.py  wsgi.py
sample_project/neo4jadmin/neoapps/common/: apps.py  defs.py  models.py  schema.py  schema_old.py  urls.py  views.py
sample_project/neo4jadmin/neomodel_admin/: forms.py  options.py  urls.py  widgets.py
