[metadata]
name = django-neomodel-admin
version = 2.0.0
description = This is a sample module allow you to use the neo4j graph database with Django admin interface.
long_description = file: README.rst
url = https://github.com/sinasaderi/django-neomodel-admin
author = Sina Saderi
author_email = sina.saderi@gmail.com
license = BSD-3-Clause 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
packages = find: